--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fj-pipe",
   "version": "1.0.3",
-  "description": "",
+  "description": "Pipe functions, FP style.",
   "main": "index.js",
   "scripts": {
     "test": "gulp test"
