--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-watch": "^4.1.0",
     "mochify": "^2.2.0"
+  },
+  "dependencies": {
+    "fj-compose": "^1.1.0"
   }
 }
